@@ -1,4 +1,13 @@
-	- TODO: fix extensions installation!
+2009-10-31 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.2.0-OOO320_m2-1 :
+	- new snapshot
+	- add KDE4 support to the profile file + install msg
+	- install all built extensions
+	# sun-report-builder.oxt and
+	# wiki-publisher.oxt installation is still broken
+	- link unopkg
+
 
 2009-10-17 Andreas Radke <andyrtr at archlinux.org>
 
